crates/spite-parser/tests/snapshots/optional_chaining__syntax_and_diagnostic_snapshots-3.snap
---
source: crates/spite-parser/tests/optional_chaining.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 0,
        end: 4,
    },
    message: "invalid update target",
}
